[package]
name = "micro-shell"
version = "0.1.0"
authors = ["jules_lama <jules_lama@yahoo.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = "0.3.8"
winapi-util = "0.1.5"
winapi-x86_64-pc-windows-gnu = "0.4.0"
winapi-build = "0.1.1"
os = "0.1.0"